--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <body>
     <main> 
         <h1>Morse Code Translator</h1>
-        <input type="">
-        <output></output>
-        <button>Translate</button>
+        <input class="input-text" type="">
+        <p class="output-text">heel</p>
+        <button class="english-btn">Translate to English</button>
+        <button class="morse-btn">Translate to Morse</button>
     </main>
     <script src="index.js"></script>
 </body>
