--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main> 
         <h1>Morse Code Translator</h1>
         <input class="input-text" type="">
-        <p class="output-text">heel</p>
+        <p class="output-text"></p>
         <button class="english-btn">Translate to English</button>
         <button class="morse-btn">Translate to Morse</button>
     </main>
