add instructions to html page

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 <body>
     <main> 
         <h1>Morse Code Translator</h1>
+        <p>Type the word(s) you would like to translate in the box below. To translate from Morse, separate letters with a space and words with "/". E.g. "--. --- --- -../-.. .- -.--"</p>
         <input class="input-text" type="">
         <p class="output-text"></p>
         <button class="english-btn">Translate to English</button>
         <button class="morse-btn">Translate to Morse</button>
     </main>
-    <script src="index.js"></script>
+    <script src="scripts/index.js" type="module"></script>
 </body>
 </html>
