Wording of instructions

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main> 
         <h1>Morse Code Translator</h1>
-        <p>Type the word(s) you would like to translate in the box below. To translate from Morse, separate letters with a space and words with "/". E.g. "--. --- --- -../-.. .- -.--"</p>
+        <p>Type the word(s) you would like to translate in the box below. To translate from Morse, separate letters with a space and words with "/". <br> <br> E.g. "--. --- --- -../-.. .- -.--"</p>
         <input class="input-text" type="">
         <p class="output-text"></p>
         <button class="english-btn">Translate to English</button>
